2005-08-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/new_book_dialog_manual.rb:

	Use the new icon as the default cover image.

	* lib/alexandria/ui/main_app.rb,
	  lib/alexandria/macui/MainController.rb:

	Clarify the GNOME status bar or the Cocoa main window's title by
	displaying "X unrated books" instead of "X books, X unrated" when all the
	books are unrated.

	* lib/alexandria/.cvsignore,
	  lib/alexandria/pre-setup.rb,
	  lib/alexandria/preferences.rb:

	Automatically generates a default_preferences.rb file at install time,
	that basically contains a hash with the name and the default value of
	variables described in the .schema file.  This hash is inspected each time
	GConf returns nil for a given variable.  This should fix all issues
	related to the installation of GConf schemas.

2005-08-02  Laurent Sansonetti  <lrz@gnome.org>

	* alexandria.xcodeproj/project.pbxproj:

	Fixed the installation of zoom.bundle and marc.rb.

	* lib/alexandria/book_providers.rb:

	When removing an abstract provider, remove it from the 'providers_priority'
	list as well (if it is there).

	* lib/alexandria/preferences.rb:

	- When replacing a variable with an empty array, simply unset the
	variable, as GConf apparently does not support this by throwing an error ;
	- Implemented the deletion of variables.

	* lib/alexandria/ui/icons.rb:

	Use icon_book.png instead if icon.png as the default book icon.

	* lib/alexandria/ui/main_app.rb:

	Resize all icons to have the same height (and not the same width as
	before).

	* lib/alexandria/ui/new_book_dialog.rb:

	- Do not download book covers when the URI is nil ;
	- Make downloaded book covers smaller, and resize them to have the same
	  height exactly as in the main icon view.

	* lib/alexandria/ui/preferences_dialog.rb:

	Implemented the abstract providers infrastructure (adding, editing and
	removing new providers).

	* lib/alexandria/book_providers/amazon.rb:
